add rpm specfile

--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,7 @@
 #                                               -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
 
-AC_INIT([libilbc0-rfc3951],[0.6])
+AC_INIT([libilbc-rfc3951],[0.7])
 AC_PREREQ(2.63)
 AC_CONFIG_SRCDIR([downloads/known_checksums/rfc3951.txt.md5])
 AC_CONFIG_AUX_DIR([build-aux])
@@ -51,5 +51,6 @@ AC_CONFIG_FILES([
   pkgconfig/Makefile
   pkgconfig/ilbc.pc
   man/Makefile
+  libilbc-rfc3951.spec
 ])
 AC_OUTPUT
