--- a/.gitignore
+++ b/.gitignore
@@ -15,9 +15,18 @@ autom4te.cache
 build-aux
 config.status
 m4
-
 INSTALL
 downloads/extract-cfile.awk
 downloads/rfc3951.txt
 libilbc-rfc3951.spec
 pkgconfig/ilbc.pc
+compile
+config.guess
+config.h
+config.h.in
+config.sub
+depcomp
+install-sh
+ltmain.sh
+missing
+stamp-h1
